	* The end result of these changes should be fast drawing on all OSes
	  with all the features of previous versions restored.
	* If no working directory is specified then new tabs will open in the
	  same directory as the previous session. This doesn't work with the
	  default settings yet. Need to execute the user's login shell directly
	  rather than using 'login -fp' to do it for us.

2009-04-15 delx
	* Fixed selection highlighting when using background images (#2762076)

2009-04-10 ujwal
	* Moved display update timer from PTYTask to PTYSession. PTYTask should 
	  have no knowledge of display logic. Timer is now a repeating timer.

2009-04-10 delx
	* Revert to old force screen update behaviour for 10.4
	* Fix overwriting of static window titles (#2744363)
	* Fixed a bug when pasting more than 1024 characters of text
	* Rewrote bits of PTYTask

2009-04-07 delx
	* Fixed non-Monaco font drawing
	* Fixed regression, default bg color was drawn over background image
	* Don't position windows in the dock area
	* Save last window position and reopen first window in that location

2009-04-07 ujwal
	* Fixed crash on quitting.

2009-03-28 delx
	* Guaranteed restoration of old window position upon exiting fullscreen

2009-03-23 delx
	* Smarter placement of new terminal windows. It is aware of multiple
	  monitors as well as workspaces (Spaces). Windows are positioned on
	  screen so they have the smallest overlap with any other window.

2009-03-20 delx
	* charWidth is now set with ceil() rather than being truncated. This
	  should make wider characters fit correctly.
	* If char j on a line is dirty, force redraw of j+1 also. This ensures
	  that any subpixel rendering that is done does not leave trails on the
	  next character.

2009-03-16 delx
	* The cursor is now double-width when over a double-width character.
	* Fixed selection of wide chars after breaking it on 2009-03-13

2009-03-13  delx
	* Remove character caching code. Testing shows the drawing to run just